crates/ty_python_types/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Tests_for_a_variety_…_-_Variadic_keyword_arg…_(4c855e39ea6baeaf).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Tests for a variety of argument types - Variadic keyword arguments
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(**numbers: int) -> int:
2 |     return len(numbers)
3 | 
4 | foo(a=1, b=2, c=3, d="hello", e=5)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:4:20
  |
2 |     return len(numbers)
3 |
4 | foo(a=1, b=2, c=3, d="hello", e=5)  # error: [invalid-argument-type]
  |                    ^^^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(**numbers: int) -> int:
  |     ^^^ -------------- Parameter declared here
2 |     return len(numbers)
  |
info: rule `invalid-argument-type` is enabled by default

```
